@@ -25,7 +25,7 @@ package net.kyori.adventure.text.event;
 
 import com.google.common.testing.EqualsTester;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.HashSet;
 import java.util.Set;
 import net.kyori.adventure.key.Key;
@@ -40,33 +40,27 @@ class ClickEventTest {
     new EqualsTester()
       .addEqualityGroup(
         ClickEvent.openUrl("https://google.com/"),
-        ClickEvent.openUrl(new URL("https://google.com/")),
-        ClickEvent.clickEvent(ClickEvent.Action.OPEN_URL, "https://google.com/"),
+        ClickEvent.openUrl(URI.create("https://google.com/").toURL()),
+        ClickEvent.clickEvent(ClickEvent.Action.OPEN_URL, ClickEvent.Payload.string("https://google.com/")),
         ClickEvent.clickEvent(ClickEvent.Action.OPEN_URL, ClickEvent.Payload.string("https://google.com/"))
       )
       .addEqualityGroup(
         ClickEvent.runCommand("/test"),
-        ClickEvent.clickEvent(ClickEvent.Action.RUN_COMMAND, "/test"),
         ClickEvent.clickEvent(ClickEvent.Action.RUN_COMMAND, ClickEvent.Payload.string("/test"))
       )
       .addEqualityGroup(
         ClickEvent.suggestCommand("/test"),
-        ClickEvent.clickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/test"),
         ClickEvent.clickEvent(ClickEvent.Action.SUGGEST_COMMAND, ClickEvent.Payload.string("/test"))
       )
       .addEqualityGroup(
         ClickEvent.changePage(1),
-        ClickEvent.changePage("1"),
-        ClickEvent.clickEvent(ClickEvent.Action.CHANGE_PAGE, "1"),
         ClickEvent.clickEvent(ClickEvent.Action.CHANGE_PAGE, ClickEvent.Payload.integer(1))
       )
       .addEqualityGroup(
         ClickEvent.copyToClipboard("test"),
-        ClickEvent.clickEvent(ClickEvent.Action.COPY_TO_CLIPBOARD, "test"),
         ClickEvent.clickEvent(ClickEvent.Action.COPY_TO_CLIPBOARD, ClickEvent.Payload.string("test"))
       )
       .addEqualityGroup(
-        ClickEvent.custom(Key.key("test"), "test"),
         ClickEvent.custom(Key.key("test"), BinaryTagHolder.binaryTagHolder("test")),
         ClickEvent.clickEvent(ClickEvent.Action.CUSTOM, ClickEvent.Payload.custom(Key.key("test"), BinaryTagHolder.binaryTagHolder("test")))
       )
